...
                    .padding(.vertical, 15)
                    .frame(width: 230)
                    .background(Color("ButtonColor"))
                    .cornerRadius(4)
                }
                .accessibilityLabel("S'inscrire avec une adresse e-mail")
                .accessibilityIdentifier("signUpButton")
                
                Button(action: {
                    flow = .signIn
                }) {
                    HStack(spacing: 20) {
                        Image(systemName: "envelope.fill")
...
